# langchain-basics

./: .env.example  .gitignore  app.py  basics.py  output_parsers.py  pyproject.toml
agents/: linkedin_lookup_agent.py  twitter_lookup_agent.py
scrapers/: linkedin.py  twitter.py
templates/: index.html
tools/: tools.py
