[project]
name = "langchain-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-google-genai>=2.1.3",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.14",
    "langchainhub>=0.1.21",
    "langsmith>=0.3.37",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.7",
    "tweepy>=4.15.0",
]
